Changelog
=========

SVN
----------------

* When a user has permission to view an address book, it will see the 3
  main tabs with the 3 main views.

* Removed the border when inside a search or a search result. This "fixes"
  the issue where the wrong tab was selected when inside a search or search
  results.

* Added checkboxes to send email and export inside a group view.

* Fixed missing translations under the "Send emails page".

* Added "go back" and "Advanced search" buttons properly when getting or not
  getting search results.

* Finished with the country and states fields, added them to the search
  templates.

* Fixed a typo with the email spanish translation

* Added a note when sending emails about opening the default email client


1.2.0
----------------

* Added Sectors and Sub sectors drop downs to organizations, where you can
  select a "sector" and then the "sub sectors" are automatically updated
  using KSS (Same behaviour as countries and states). This sectors are
  loaded in the address book itself

* Replaced the Country and State text entries with a drop down for all countries
  and, using kss, a drop down with states for each country. This was mainly
  taken from GetPaid, so most of the credit goes for those great gentlemen.

* Title for the group view page

* Moved some fields to the default schemata, so instead of a drop down, they
  are shown as tabs

* Replaced the advanced search link with buttons.

* Fixed a bug with the advanced search. Was giving some errors when searching
  persons based on their organization.

* The import script now imports persons even if they had no organization.

* Quick search feature can now return results if part of a string was
  entered. And if several words are used, it does an OR of all of them.

* Added "No results found" string when no results are found, instead of
  showing an empty table.

* Removed all required fields, only Name and Last name are required for